# fvdb-examples

./: .clang-format  .clang-format-ignore  .clangd  .cursorrules  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  make_segmentation_dataset.py  train_segmentation.py  view_checkpoint.py
.github/workflows/: codestyle.yml
depth_reconstruction/: .gitignore  README.md  download_example_data.py  reconstruct_depth_map.py  sun_3d_dataset.py
garfvdb/: config.py  loss.py  model.py  optim.py  util.py
garfvdb/training/: dataset.py  segmentation.py  (+1 more)
instance_segmentation/garfvdb/: .gitignore  README.md  garfvdb_environment.yml  pyproject.toml  train_segmentation.py  view_checkpoint.py  visualize_segmentation_clusters.py
instance_segmentation/garfvdb/evaluation/: README.md  eval_completeness.py  nerfstudio_to_colmap.py  visualize_masks.ipynb
instance_segmentation/garfvdb/garfvdb/: config.py  loss.py  model.py  optim.py  util.py
instance_segmentation/garfvdb/garfvdb/evaluation/clustering/: __init__.py  clustering.py
instance_segmentation/garfvdb/garfvdb/scene_transforms/: __init__.py  image_segmentation_masks.py
instance_segmentation/garfvdb/garfvdb/training/: dataset.py  dataset_transforms.py  segmentation_writer.py
instance_segmentation/garfvdb/old_scripts/: README  write_segmentation_masks.py
old_scripts/: write_test_images.py
open_vocabulary_segmentation/langsplatv2/: .gitignore  README.md  pyproject.toml  train_langsplatv2.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/: __init__.py  config.py  loss.py  model.py  util.py  vq_utils.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/scene_transforms/: __init__.py  clip_feature_encoding.py  multi_scale_sam_masks.py
open_vocabulary_segmentation/langsplatv2/langsplatv2/training/: __init__.py  dataset.py  langsplatv2_writer.py  trainer.py
open_vocabulary_segmentation/langsplatv2/testers/: data_tester.py  dataset_tester.py
point_transformer_v3/: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  setup_env.py  setup_env.sh
point_transformer_v3/fvdb_extensions/: __init__.py
point_transformer_v3/fvdb_extensions/configs/: fvdb_runtime.py  semseg-pt-v3m1-0-fvdb-test.py  semseg-pt-v3m1-0-test.py
point_transformer_v3/fvdb_extensions/models/: __init__.py  fvdb_utils.py  point_transformer_v3m1_fvdb.py  ptv3_fvdb.py
point_transformer_v3/scripts/: README.md  apply_formatting.py  check_spdx.py  fix_formatting.sh
point_transformer_v3/scripts/data/: download_example_data.py  prepare_scannet_dataset.py
point_transformer_v3/scripts/test/: compute_difference.py  minimal_inference.py
point_transformer_v3/tests/: conftest.py
point_transformer_v3/tests/unit/: __init__.py  test_order_type_validation.py  test_pointcept_point.py
(+21 files in other folders)
