[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garfvdb"
version = "0.0.1"
description = "GARƒVDB: Gaussian Splatting with Scale-Conditioned Segmentation"
requires-python = ">=3.11"
dependencies = [
    "cuml",
    "torch>=2.8.0",
    "torchvision",
    "numpy",
    "scikit-learn",
    "opencv-python",
    "tqdm",
    "tyro",
    "tensorboard",
    "fvdb-core>=0.4.2,<0.5.0",
    "nanovdb-editor>=0.0.24,<0.2.0",
    "fvdb-reality-capture>=0.4.0<0.5.0",
    "pycocotools",
    "matplotlib",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["garfvdb*"]
